RESOLVED FIXED 200445
overflow="visible" has no effect on the dimension of a <use> element unless its dimensions are specifed
https://bugs.webkit.org/show_bug.cgi?id=200445
Summary overflow="visible" has no effect on the dimension of a <use> element unless i...
Said Abou-Hallawa
Reported 2019-08-05 13:16:28 PDT
Created attachment 375547 [details] test case Open the attached test case. Expected: Two 100x100 green rectangles. Result: The first rectangle is 100x100 green rectangle. The second rectangle is not fully green. The first rectangle is defined as: <use href="#s" width="100" height="100"/> While the second rectangle is defined as: <use href="#s"/> The bug is the dimension of the second <use> element is not specified so it should take the dimension of the symbol. And it should be visible because the container <svg> is defined as: <svg x = "120" width="50" height="50" overflow="visible">
Attachments
test case (515 bytes, image/svg+xml)
2019-08-05 13:16 PDT, Said Abou-Hallawa
no flags
Ahmad Saleem
Comment 2 2022-08-12 00:21:40 PDT
It is still reproducible in Safari Technical Preview 151 and Safari 15.6 using attached test case where second square show "red" patch while all other browsers (Chrome Canary 106 and Firefox Nightly 105) does not show "red" patch in second square. Just wanted to share updated status. Thanks!
Radar WebKit Bug Importer
Comment 3 2022-08-12 11:07:17 PDT
Ahmad Saleem
Comment 5 2023-05-10 14:42:04 PDT
*** Bug 182172 has been marked as a duplicate of this bug. ***
EWS
Comment 6 2023-05-11 11:46:38 PDT
Committed 263977@main (fd0a41d19f81): <https://commits.webkit.org/263977@main> Reviewed commits have been landed. Closing PR #13662 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.