overflow="visible" has no effect on the dimension of a `use` element unless its dimensions are specified

https://bugs.webkit.org/show_bug.cgi?id=200445
rdar://problem/98577733

Reviewed by Simon Fraser.

This patch aligns WebKit with Gecko / Firefox, Blink / Chromium and SVG2 Spec.

Merge - https://chromium.googlesource.com/chromium/src.git/+/2e863303d9035d517bfd13de1a5b3388576e4443

Per [1], 'width' and/or 'height' on a `use` override the corresponding
values on a referenced `svg` or `symbol`. If no 'width' or 'height' is
specified on the `use`, the values set on the referenced elements are
retained.
Previously we would always set 'width' / 'height' on a referenced
`symbol` to '100%' if the `use` did not have any overriding values.
Change this to follow the specification and copy the values from the
shadow element as needed - much like what was previously done for
referenced `svg` elements.

[1] https://svgwg.org/svg2-draft/struct.html#UseLayout

* Source/WebCore/svg/SVGUseElement.cpp:
(SVGUseElement::transferSizeAttributesToTargetClone): Align as per Spec
* LayoutTests/svg/custom/relative-sized-shadow-tree-content-with-symbol.xhtml: Rebaselined
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/svg/struct/reftests/use-symbol-dimensions-override-001-expected.txt: Rebaselined
* LayoutTests/platform/ios-simulator/imported/w3c/web-platform-tests/svg/struct/reftests/use-symbol-dimensions-override-001-expected.txt: Rebaselined
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/svg/struct/reftests/use-symbol-dimensions-override-001-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/263977@main